packages/svelte/tests/compiler-errors/samples/runes-export-let/main.svelte
<script context="module">
    export let bar = ''; // check that it doesn't error here already
</script>

<script>
    export let foo;
    let x = $state(); // mark as runes mode
</script>
